V20190121 set img responsive

--- a/backend.html
+++ b/backend.html
@@ -155,7 +155,7 @@
               </div>
 
               <div class="col-md-4 centered">
-                <img src="img/backend/dba01.jpg" width="300">
+                <img src="img/backend/dba01.jpg" class="img-responsive">
               </div>
             </div>
           </div>
@@ -173,7 +173,7 @@
             </div>
 
             <div class="col-md-4 centered">
-              <img src="img/backend/backmysql01.jpg" width="300">
+              <img src="img/backend/backmysql01.jpg" class="img-responsive">
             </div>
           </div>
         </div>
