--- a/frontend.html
+++ b/frontend.html
@@ -156,7 +156,7 @@
               </div>
 
               <div class="col-md-4 centered">
-                <img src="img/frontend/pagination01.png" width="300">
+                <img src="img/frontend/pagination01.png" class="img-responsive">
               </div>
             </div>
           </div>
@@ -174,7 +174,7 @@
               </div>
 
               <div class="col-md-4 centered">
-                <img src="img/frontend/xstarcount01.jpg" width="300">
+                <img src="img/frontend/xstarcount01.jpg" class="img-responsive">
               </div>
             </div>
           </div>
@@ -192,7 +192,7 @@
             </div>
 
             <div class="col-md-4 centered">
-              <img src="img/frontend/p5js01.jpg" width="300">
+              <img src="img/frontend/p5js01.jpg" class="img-responsive">
             </div>
           </div>
         </div>
