--- a/frontendessay/frontendxstar01.html
+++ b/frontendessay/frontendxstar01.html
@@ -147,7 +147,7 @@
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
               <div class="col-md-6 mt">
-                <img src="../img/frontend/xstarcount02.png" width="320">
+                <img src="../img/frontend/xstarcount02.png" class="img-responsive">
                 <h3>用五分钟快速写一个用于活动的倒计时+计分板的DEMO<br>JS &amp; Frontend</h3>
                 <hr>
                 <h5>By Anwhere Jin. <span>Date issued : 25-12-2018.</span></h5>
@@ -156,18 +156,18 @@
                 <p class="mt">
                   <p class="mmt">计分板十分简单，直接在js里为每组家庭分配一个用于计数的值<span class="bgr">inidnum</span>，点击<span class="bgr">+</span>则累加该值，并显示在页面上</p>，点击<span class="bgr">-</span>则累减该值，并显示在页面上</p>
                   <div class="centered">
-                    <img src="../img/frontend/xstarcount03.png">
+                    <img src="../img/frontend/xstarcount03.png" class="img-responsive">
                   </div>
                 </p>
                 <br><h4>· 02>>> 倒计时</h4>
                 <p class="mt">
                   <p class="mmt">倒计时采用<span class="bgr">setInterval()</span>方法，<span class="bgr">setInterval()</span>方法可按照指定的周期（以毫秒计）来调用函数或计算表达式。<span class="bgr">setInterval()</span> 方法会不停地调用函数，直到<span class="bgr">clearInterval()</span>  被调用或窗口被关闭。设置初始倒计时数，每当<span class="bgr">setInterval()</span>被调用时，倒计时秒数-1，然后显示到页面上。</p>
                   <div class="centered">
-                    <img src="../img/frontend/xstarcount04.png">
+                    <img src="../img/frontend/xstarcount04.png" class="img-responsive">
                     <p>点击调用倒计时方法</p>
                   </div>
                   <div class="centered">
-                    <img src="../img/frontend/xstarcount05.png">
+                    <img src="../img/frontend/xstarcount05.png" class="img-responsive">
                     <p>倒计时方法</p>
                   </div>
                 </p>            
@@ -179,7 +179,7 @@
                 <p class="mmt">重复点击倒计时按钮时发现倒计时像开了多线程一样并发计时，看到这样的效果便想到是<span class="bgr">setInterval()</span>每次点击都会被调用，造成多次调用，需要引入<span class="bgr">clearInterval()</span>清除先前的计时器</p>
                 <p class="mmt">实现方法也很简单，添加全局变量<span class="bgr">timerset</span>，在每次点击调用计时器方法时先清除原先的计时器。后续变不会出现多次调用的问题</p>
                 <div class="centered">
-                  <img src="../img/frontend/xstarcount06.png">
+                  <img src="../img/frontend/xstarcount06.png" class="img-responsive">
                   <br><p>添加timerset清除计时器</p>
                 </div>
               </p>
