--- a/frontendessay/frontp5js01.html
+++ b/frontendessay/frontp5js01.html
@@ -147,7 +147,7 @@
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
               <div class="col-md-6 mt">
-                <img src="../img/frontend/frontp5js02.png" width="320">
+                <img src="../img/frontend/frontp5js02.png" class="img-responsive">
                 <h3>Access to Image from origin 'null' has been blocked by CORS policy 跨域问题<br>P5.js &amp; Frontend</h3>
                 <hr>
                 <h5>By Anwhere Jin. <span>Date issued : 12-21-2018.</span></h5>
@@ -156,7 +156,7 @@
                 <p class="mt">
                   <p class="mmt">直接取控制台去查看报错信息</p>
                   <div class="centered">
-                  <img src="../img/frontend/frontp5js03.png" width="320">
+                  <img src="../img/frontend/frontp5js03.png" class="img-responsive">
                   </div>
                   <p class="mmt">可以看到显示信息是图片无法正常加载，而我们本地是有相应的图片的，所以应该不是路径不对的问题。本地源码为：</p>
                   <pre>function preload() {
