--- a/valuable.html
+++ b/valuable.html
@@ -155,7 +155,7 @@
               </div>
 
               <div class="col-md-4 centered">
-                <img src="img/valueable/apk01.jpg" width="300">
+                <img src="img/valueable/apk01.jpg" class="img-responsive">
               </div>
             </div>
           </div>
@@ -173,7 +173,7 @@
             </div>
 
             <div class="col-md-4 centered">
-              <img src="img/valueable/github01.jpg" width="300">
+              <img src="img/valueable/github01.jpg" class="img-responsive">
             </div>       
           </div>
         </div>
