--- a/valuableessay/valuablegit01.html
+++ b/valuableessay/valuablegit01.html
@@ -147,7 +147,7 @@
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
               <div class="col-md-6 mt">
-                <img src="../img/valueable/github02.png" width="320">
+                <img src="../img/valueable/github02.png" class="img-responsive">
                 <h3>Github的建立与使用<br>Git &amp; Valuable</h3>
                 <hr>
                 <h5>By Anwhere Jin. <span>Date issued : 06-24-2017.</span></h5>
@@ -197,7 +197,7 @@
                   <p class="mmt">现在，你的改动已经提交到了 HEAD，但是还没到你的远端仓库。 </p>
                 </p>
                 <div class="centered">
-                  <img src="../img/valueable/github03.png" width="320">
+                  <img src="../img/valueable/github03.png" class="img-responsive">
                 </div>
                 <p class="mt">
                   <h6>b>>> 推送改动 </h6>
@@ -216,7 +216,7 @@
                   <h6>c>>> 分支 </h6>
                   <p class="mmt">分支是用来将特性开发绝缘开来的。在你创建仓库的时候，master是”默认的”分支。在其他分支上进行开发，完成后再将它们合并到主分支上。</p>
                   <div class="centered">
-                  <img src="../img/valueable/github04.png" width="320">
+                  <img src="../img/valueable/github04.png" class="img-responsive">
                   </div>
                   <p class="mmt">创建一个叫做”feature_x”的分支，并切换过去：</p>
                   <code>git checkout -b feature_x </code>
