--- a/visualizationessay/visualization1217.html
+++ b/visualizationessay/visualization1217.html
@@ -147,7 +147,7 @@
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
               <div class="col-md-6 mt">
-                <img src="../img/visual/messydraw02.png" width="320">
+                <img src="../img/visual/messydraw02.png" class="img-responsive">
                 <h3>MessyCurveDraw 飞线作画的实现<br>Processing &amp; Visualization</h3>
                 <hr>
                 <h5>By Anwhere Jin. <span>Date issued : 12-13-2018.</span></h5>
@@ -157,7 +157,7 @@
                 <h4>· 01>>> 程序结构</h4> 
                 <p class="mt">主代码非常简单，首先是导入图片，设置画布大小，背景等，然后开始调用主要的paint类进行绘制，通过key ‘s’ 控制是否停止和开始绘制，我没有让他加载和控制实现鼠标点击切换绘制的图片。主代码改写成java的方式相对比较容易，js的var改写成相应的数值类型，函数function改写成void就可以了。</p>
                 <div class="centered">
-                  <img src="../img/visual/messydraw03.png" width="320">
+                  <img src="../img/visual/messydraw03.png" class="img-responsive">
                 </div>
                 
                 <p class="mt">其中最主要的实现类就是Paint类了，郑越升先生在<a href="https://mp.weixin.qq.com/s/2gT3olCDo6TgseFCjoZiHA">这篇文章</a>里详细介绍了具体的实现思想，自己可以前往看看，我简单描述一下相关的内容。
@@ -170,7 +170,7 @@
                 </p>
 
                 <div class="centered">
-                  <img src="../img/visual/messydraw04.png" width="320">
+                  <img src="../img/visual/messydraw04.png" class="img-responsive">
                 </div>
                 
               </div>
