--- a/xstarcount.html
+++ b/xstarcount.html
@@ -150,7 +150,7 @@
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
               <div class="centered">
-              <img src="img/logoForLong.png" width="300">
+              <img src="img/logoForLong.png" class="img-responsive">
               </div>
               <br>
               <div class="centered" style="font-size: 25px; font-weight: bold;">星希文化传媒</div>
