--- a/backendessay/backenddba01.html
+++ b/backendessay/backenddba01.html
@@ -147,7 +147,7 @@
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
               <div class="col-md-6 mt">
-                <img src="../img/backend/dba02.jpg" width="320">
+                <img src="../img/backend/dba02.jpg" class="img-responsive">
                 <h3>Oracle DBA 操作总结<br>Oracle &amp; Backend</h3>
                 <hr>
                 <h5>By Anwhere Jin. <span>Date issued : 24-12-2018.</span></h5>
