--- a/backendessay/backendmysql01.html
+++ b/backendessay/backendmysql01.html
@@ -147,7 +147,7 @@
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
               <div class="col-md-6 mt">
-                <img src="../img/backend/backmysql02.jpg" width="320">
+                <img src="../img/backend/backmysql02.jpg" class="img-responsive">
                 <h3>Data truncation: Incorrect datetime value时间入库错误<br>MySQL &amp; Backend</h3>
                 <hr>
                 <h5>By Anwhere Jin. <span>Date issued : 11-16-2018.</span></h5>
