--- a/frontendessay/frontpage01.html
+++ b/frontendessay/frontpage01.html
@@ -147,7 +147,7 @@
           <div class="col-lg-10 col-lg-offset-1">
             <div class="row">
               <div class="col-md-6 mt">
-                <img src="../img/frontend/pagination01.png" width="320">
+                <img src="../img/frontend/pagination01.png" class="img-responsive">
                 <h3>JQuery实现分页 | Pagination <br>JQuery &amp; Frontend</h3>
                 <hr>
                 <h5>By Anwhere Jin. <span>Date issued : 26-12-2018.</span></h5>
@@ -167,7 +167,7 @@
                 <br><h4>· 03>>> HTML页面</h4>
                 <p class="mt">
                   <div class="centered">
-                    <img src="../img/frontend/pagination02.png" width="320">
+                    <img src="../img/frontend/pagination02.png" class="img-responsive">
                   </div>
                 </p>
                 <br><h4>· 03>>> js绘制分页样式</h4>
