--- a/general.html
+++ b/general.html
@@ -155,7 +155,7 @@
               </div>
 
               <div class="col-md-4 centered">
-                <img src="img/visual/messydraw01.jpg" width="300">
+                <img src="img/visual/messydraw01.jpg" class="img-responsive">
               </div>
             </div>
           </div>
